Save files to disk in GECK without closing game

--- a/nvse_plugin_example/nvse_plugin_example.vcxproj.filters
+++ b/nvse_plugin_example/nvse_plugin_example.vcxproj.filters
@@ -133,6 +133,8 @@
     <ClInclude Include="HotReload.h" />
     <ClInclude Include="OpenInGeck.h" />
     <ClInclude Include="CompileScriptFromFile.h" />
+    <ClInclude Include="SimpleINILibrary.h" />
+    <ClInclude Include="utility.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="exports.def" />
