Add sync between files and geck and script file generation

--- a/nvse_plugin_example/nvse_plugin_example.vcxproj
+++ b/nvse_plugin_example/nvse_plugin_example.vcxproj
@@ -350,6 +350,7 @@
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
     </ClCompile>
+    <ClCompile Include="CreateScriptFiles.cpp" />
     <ClCompile Include="dllmain.c">
       <ForcedIncludeFiles Condition="'$(Configuration)|$(Platform)'=='Debug ng|Win32'">
       </ForcedIncludeFiles>
@@ -403,6 +404,7 @@
     <ClInclude Include="..\nvse\nvse\Utilities.h" />
     <ClInclude Include="..\nvse\nvse\utility.h" />
     <ClInclude Include="CompileScriptFromFile.h" />
+    <ClInclude Include="CreateScriptFiles.h" />
     <ClInclude Include="OpenInGeck.h" />
     <ClInclude Include="ScriptCommands.h" />
     <ClInclude Include="HotReload.h" />
