--- a/nvse_plugin_example/nvse_plugin_example.vcxproj.filters
+++ b/nvse_plugin_example/nvse_plugin_example.vcxproj.filters
@@ -74,6 +74,7 @@
     <ClCompile Include="OpenInGeckEditor.cpp" />
     <ClCompile Include="CompileScriptFromFile.cpp" />
     <ClCompile Include="CreateScriptFiles.cpp" />
+    <ClCompile Include="HotReloadUtilities.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\nvse\nvse\GameAPI.h">
@@ -135,8 +136,8 @@
     <ClInclude Include="OpenInGeck.h" />
     <ClInclude Include="CompileScriptFromFile.h" />
     <ClInclude Include="SimpleINILibrary.h" />
-    <ClInclude Include="utility.h" />
     <ClInclude Include="CreateScriptFiles.h" />
+    <ClInclude Include="HotReloadUtilities.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="exports.def" />
