--- a/nvse_plugin_example/nvse_plugin_example.vcxproj
+++ b/nvse_plugin_example/nvse_plugin_example.vcxproj
@@ -428,6 +428,9 @@
       <ReferenceOutputAssembly>false</ReferenceOutputAssembly>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Natvis Include="GameTypes.natvis" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
